--- a/ThoVietNam/res/menu/main.xml
+++ b/ThoVietNam/res/menu/main.xml
@@ -7,6 +7,11 @@
         android:id="@+id/action_settings"
         android:orderInCategory="100"
         android:title="@string/action_settings"
+        app:showAsAction="always"/>
+    <item
+        android:id="@+id/action_about"
+        android:orderInCategory="100"
+        android:title="@string/action_about"
         app:showAsAction="never"/>
 
 </menu>
